--- a/.travis.yml
+++ b/.travis.yml
@@ -6,11 +6,12 @@ python:
   - "3.6"
   - "3.7"
   - "3.8"
+  - "3.9"
 before_install:
   - "pip install -U pip"
 install:
   - "pip install -e .[test]"
 script:
   - "py.test tests/"
-  - "pylint pydpkg/"
-  - "pep8 pydpkg/"
+  - "pylint -d R0912 pydpkg/"
+  - "pep8 --max-line-length=90 --ignore=E203 pydpkg/"
