--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -9,7 +9,6 @@ jobs:
     strategy:
       matrix:
         python-version:
-        - "3.6"
         - "3.7"
         - "3.8"
         - "3.9"
@@ -30,8 +29,8 @@ jobs:
           POETRY_VIRTUALENVS_CREATE: false
       - name: Check formatting
         run: poetry run black --check .
-      - name: Lint with flakehell
-        run: poetry run flakehell lint pydpkg test
+      - name: Lint with flakeheaven
+        run: poetry run flakeheaven lint pydpkg test
       - name: Lint with pylint
         run: poetry run pylint -d R0912 -d W0511 pydpkg/
       - name: Lint with pycodestyle (aka pep8)
