--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -25,8 +25,8 @@ jobs:
           POETRY_VIRTUALENVS_CREATE: false
       - name: Check formatting
         run: poetry run black --check .
-      - name: Lint with flakehell
-        run: poetry run flakehell lint pydpkg test
+      - name: Lint with flakeheaven
+        run: poetry run flakeheaven lint pydpkg test
       - name: Lint with pylint
         run: poetry run pylint -d R0912 -d W0511 pydpkg/
       - name: Lint with pycodestyle (aka pep8)
