--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "pydpkg"
-version = "1.9.0"
+version = "1.9.1"
 description = "A python library for parsing debian package control headers and version strings"
 authors = ["Nathan J. Mehl <pypi@memory.blank.org>"]
 homepage = "https://github.com/memory/python-dpkg"
@@ -31,6 +31,7 @@ arpy = "^2.3.0"
 six = "^1.16.0"
 PGPy = "0.6.0"
 zstandard = "^0.19.0"
+cryptography = ">=39.0.1"
 
 [tool.poetry.dev-dependencies]
 black = "^22.10.0"
