--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -15,7 +15,7 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v2
         with:
-          python-version: "3.10"
+          python-version: "3.12"
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
@@ -23,14 +23,8 @@ jobs:
           poetry install
         env:
           POETRY_VIRTUALENVS_CREATE: false
-      - name: Check formatting
-        run: poetry run black --check .
-      - name: Lint with flakeheaven
-        run: poetry run flakeheaven lint pydpkg test
-      - name: Lint with pylint
-        run: poetry run pylint -d R0912 -d W0511 pydpkg/
-      - name: Lint with pycodestyle (aka pep8)
-        run: poetry run pycodestyle --max-line-length=120 --ignore=E203 pydpkg/
+      - name: Check formatting and linting
+        run: poetry run ruff check
       - name: Test with pytest
         run: poetry run pytest tests/
       - name: build dists
