Use fork of PGPy
Alas PGPy has not been updated in 2 years, and cannot be
installed on python 3.13 as a result.

This change inserts a hopefully temporary fork of PGPy which
addresses both of those issues.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,7 +30,7 @@ dpkg-inspect = "pydpkg.dpkg_inspect:main"
 python = ">=3.9.2,<4.0"
 arpy = "^2.3.0"
 six = "^1.16.0"
-PGPy = {git = "https://github.com/memory/PGPy.git", rev = "26c95725d460e731b6b900d21a7897da73d6410b"}
+PGPy13 = "0.6.1rc1"
 zstandard = "^0.23.0"
 cryptography = ">=44.0.1"
 
